# skill-fleet

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_CLEANUP.md  BACKEND_STREAMING_COMPLETE.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_REVIEW.md  IMPLEMENTATION_REVIEW_1_1.md  IMPLEMENTATION_SUMMARY.md  INK_UPGRADE_COMPLETE.md  MIGRATION_COMPLETE.md  Makefile  PHASE1_COMPLETE.md  PRD.md  README.md  REFACTORING_COMPLETE.md  RE_STRUCTURE_SUMMARY.md  TASKLIST_PROGRESS.md  TESTING.md  TODO.md  TRACKLIST.md  TUI_READY.md  available_skills.xml  mlflow.db  package.json  pyproject.toml  reproduce_issue.py  test_hitl_integration.py  test_hitl_questions.py  test_poll_hitl.sh  test_streaming.py  test_understanding_workflow.py  verify_migration.sh
.github/: BRANCH_PROTECTION.md  CLAUDE_AUTOFIX_README.md  QUICKSTART.md  README.md  SETUP_INSTRUCTIONS.md  copilot-instructions.md  setup-autofix.sh
.github/agents/: python-dev.md
.github/workflows/: ci.yml  claude-autofix-retry.yml  claude-autofix.yml  claude-code-review.yml  claude.yml  codeql.yml  copilot-setup-steps.yml  release.yaml
.letta/: settings.local.json  youthful-vivid-violet.md
.skills/dspy-advanced/: SKILL.md
.skills/dspy-basics/: SKILL.md
.skills/dspy-configuration/: SKILL.md
.skills/dspy-optimization/: SKILL.md
.skills/dspy-optimization-workflow/: SKILL.md
.skills/fastapi-stack-development/: SKILL.md
.skills/prompt-refiner-claude/: SKILL.md
.skills/vibe-coding/: SKILL.md
cli/tui/: REBUILD_SUMMARY.md  package-lock.json  package.json  test-tui.sh  tsconfig.json
config/: config.yaml
config/optimized/: benchmark_results.json  optimization_results_bootstrap_v1.json  optimization_results_reflection_metrics_v1.json
config/templates/: SKILL_md_template.md
config/training/: gold_skills_v2.json  test_synthetic.json  trainset_v2.json  trainset_v3.json  trainset_v4.json
docs/: BACKGROUND_JOBS.md  CLI_SYNC_COMMANDS.md  DOCUMENTATION_RESTRUCTURING_PLAN.md  JOB_PERSISTENCE.md  MLFLOW_SETUP.md  OPTIMIZER_SELECTION.md  PHASE_0_FOUNDATION.md  PHASE_1_OPTIMIZATION.md  README.md  STREAMING_ARCHITECTURE.md  STREAMING_QUICKSTART.md  UPDATE_SUMMARY.md  agentskills-compliance.md  api-reference.md  cli-reference.md  index.md  overview.md  quick-start.md  skill-creation-guidelines.md  skill-creator-guide.md  skills-fleets.md
docs/api/: V2_ENDPOINTS.md  V2_SCHEMAS.md  api-reference.md  endpoints.md  index.md  jobs.md
docs/architecture/: CACHING_LAYER.md  CONVERSATIONAL_INTERFACE.md  DATABASE_SYNC.md  DOMAIN_LAYER.md  JOB_PERSISTENCE.md  SERVICE_LAYER.md  restructuring-status.md  sequenceDiagram.mmd  skill-creation-workflow.md  stateDiagram-v2.mmd  user_flow.md
docs/archive/: README.md
docs/cli/: commands.md  dev-command.md  index.md  interactive-chat.md  tui-architecture.md
docs/concepts/: agentskills-compliance.md  concept-guide.md  developer-reference.md
docs/development/: ARCHITECTURE_DECISIONS.md  CONTRIBUTING.md  IMPORT_PATH_GUIDE.md  SERVICE_EXTENSION_GUIDE.md  dev-command-analysis.md
docs/dspy/: ADAPTIVE_METRIC_WEIGHTING.md  GEPA_QUICK_REFERENCE.md  GEPA_SETUP_GUIDE.md  PHASE_1_OPTIMIZATION.md  index.md  modules.md  optimization.md  programs.md  signatures.md
docs/explanation/: complete-request-flow.md  database-relationships.md  dual-metadata-model.md  taxonomy-system.md  three-phase-workflow.md  validation-architecture.md
docs/getting-started/: MLFLOW_SETUP.md  STREAMING_QUICKSTART.md  index.md  skill-creation-guidelines.md
docs/guides/: api.md  cli.md  dspy.md  hitl.md  workflows.md
docs/hitl/: interactions.md  runner.md
docs/how-to-guides/: cli-usage.md  create-a-skill.md  validate-a-skill.md
docs/internal/: CODE_REVIEW_2026_01.md
docs/intro/: introduction.md
docs/llm/: dspy-config.md  index.md  providers.md  task-models.md
docs/migration/: skill-format-v2-updated.md
docs/notes/: DATABASE_SYNC_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEV_COMMAND_FIXED.md  DOCUMENTATION_RESTRUCTURING.md  FASTAPI_INTEGRATION.md  FIX_STREAMING_500.md  GEPA_SETUP_COMPLETE.md  JOB_PERSISTENCE_IMPLEMENTATION_SUMMARY.md  JOB_PERSISTENCE_UPGRADE_PLAN.md  OPTIMIZATION_GUIDE.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  QUICK_START_JOB_PERSISTENCE.md  README.md  SERVE_INTERACTIVE_CHANGES.md  TESTING_REPORT.md
docs/plans/: 2026-01-12-cli-code-review.md  (+12 more)
fixes/: BROKEN_LINKS.md  COMMIT_READINESS_REPORT.md  LINTING_REPORT.md  MIGRATION_AND_IMPORT_ANALYSIS.md  WEEK1_CODE_REVIEW.md  WEEK1_FIXES_VERIFIED.md  WEEK1_README.md  WEEK1_SUMMARY.md  broken_links_report.md  fix_links.py  reproduce_issue.py  week1_apply_all.py  week1_fix_1_consolidate_path_validation.py  week1_fix_2_async_subprocess.py  week1_fix_3_job_store_eviction.py  week1_fix_4_todo_implementations.py
migrations/: 001_init_skills_schema.sql  002_seed_taxonomy.sql  003_add_conversation_sessions.sql  004_add_missing_job_statuses.sql  005_add_hitl_columns_to_jobs.sql
plans/: 2026-01-09-fastapi-baseline-tests.md  2026-01-09-fastapi-production-patterns-design.md  2026-01-12-cli-chat-ux.md  README.md  cleanup-and-optimization-plan.md  implementation-phase-2.md  implementation-phase-final.md  nimble-serene-ember.md  overview.md  skill-creator-plan.md  skills-fleet_codebase_restructure_4833ae18.plan.md
scripts/: README.md  apply_migration.py  apply_migration_sqlalchemy.py  benchmark_optimizers.py  check.py  check_docstrings.py  check_job.py  dspy_tracker.py  expand_training_data.py  final_docstring_check.py  generate_synthetic_examples.py  generate_taxonomy_index.py  import_skills.py  manage_data.py  manage_db.py  manage_opt.py  migrate_skills_structure.py  quality-gate.sh  regenerate_training_data.py  run_gepa_optimization.py  run_optimization.py  seed_taxonomy.py  setup_dspy_tracking.py  start-mlflow-public.sh  start-mlflow.sh  test_db_sync.py  test_mlflow_tracking.py  test_phase_implementation.py  test_repository.py  verify_hitl.py
skills/: .interactive_session.json  taxonomy_meta.json
tests/: conftest.py  test_analytics.py  test_api.py  test_cors.py  test_job_sync.py  test_onboarding.py  test_streaming.py
(+801 files in other folders)
