[project]
name = "skills-fleet"
version = "0.1.0"
description = "Hierarchical skills taxonomy + DSPy workflow prototype"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "dspy>=3.0.4",
  "rich>=13.7.1",
  "mlflow>=3.8.1",
  "fastapi[standard]>=0.128.0",
  "google-genai>=1.56.0",
  "litellm[proxy]>=1.80.11",
  "openai>=2.14.0",
  "pydantic>=2.12.5",
  "python-dotenv>=1.2.1",
  "pyyaml>=6.0.0",
  "typer>=0.21.1",
  "click>=8.3.1",
  "pydantic>=2.0",
  "pyyaml>=6.0.3",
  "tomli>=2.0",
  "typing-extensions>=4.0",
  "uvicorn>=0.31.1",
  "sqlalchemy>=2.0.45",
  "asyncpg>=0.31.0",
]

[project.scripts]
skills-fleet = "skill_fleet.cli:cli_entrypoint"

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.8.0"]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_fleet", "src/tui"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "skills"]
target-version = "py312"
line-length = 100
exclude = ["skills/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "D100", "D101", "D102", "D103", "D104"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
